--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"prettier": "^3.0.3",
 		"prettier-plugin-astro": "^0.12.0",
 		"prettier-plugin-tailwindcss": "^0.5.4",
+		"rehype-katex": "^7.0.0",
+		"remark-math": "^6.0.0",
 		"tailwindcss": "^3.3.3"
 	}
 }
